# Pygentic-AI

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  compose.yaml  core_requirements.in  core_requirements.txt  dev_requirements.in  dev_requirements.txt  pyproject.toml
.github/workflows/: bandit.yml  docker-image.yml
docker/celery/: start.sh
docker/pygentic_ai/: build.sh  python_build.sh  python_start.sh
docker/ranked_jobs_ms/: python_start.sh
labs/: Untitled.ipynb
src/: app.py
src/backend/: __init__.py  logger.py  utils.py
src/backend/core/: consts.py  core.py  tools.py  utils.py
src/backend/db/: base.py  db.py
src/backend/settings/: __init__.py  backend_options.py  base.py  consts.py  dev.py  prod.py
src/backend/site/: consts.py  router.py  utils.py
src/frontend/static/css/: bulma-collapsible.min.css  bulma.css.map  pygentic_ai.css
src/frontend/static/js/: bulma-collapsible.min.js  bulma.js  htmx.js
src/frontend/templates/: home.html  result.html  status.html
src/frontend/templates/components/forms/: Form.jinja  Search.jinja
src/frontend/templates/components/main/: Base.jinja  Header.jinja  Nav.jinja  Scripts.jinja  Stylesheets.jinja  base.html  header.html  style_sheets.html
src/frontend/templates/components/snippets/: Base.jinja  Css.jinja  Js.jinja  NavbarBrand.jinja  NavbarMenu.jinja  ResultEntry.jinja  Spinner.jinja  StatusResult.jinja  js.html  result.html  status.html
